--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -2,5 +2,6 @@ Flask==3.0.3
 requests==2.32.3
 jsonify==0.5
 pillow==10.4.0
-torch==2.4.1
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch==2.2.0+cpu
 diffusers==0.30.3
